istio/referencegrant.yaml
# Allow otel-demo namespace routes to reference services in istio-system
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-bookinfo-cross-namespace
  namespace: istio-system
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: bookinfo
    - group: gateway.networking.k8s.io
      kind: GRPCRoute
      namespace: bookinfo
    - group: gateway.networking.k8s.io
      kind: TCPRoute
      namespace: bookinfo
  to:
    - group: ""
      kind: Service
